<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_required_police_label">Required Police</string>
    <string name="crime_list_item_special_button">Call</string>
    <string name="crime_list_item_solved_image_button">Solved</string>
    <string name="crime_first_image_button">First</string>
    <string name="crime_last_image_button">Last</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="email_label">Enter Email</string>
    <string name="password_label">Enter Password</string>
    <string name="password_confirm_label">Enter Password again</string>
    <string name="wrong_data_label">Entered data is incorrect</string>
    <string name="user_already_exists_label">User already exists</string>
    <string name="passwords_not_equal_label">Entered passwords are not equal</string>
    <string name="submit_button">Submit</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
</resources>
